github and twitter links.

--- a/_config.yml
+++ b/_config.yml
@@ -10,3 +10,5 @@ url: "https://gmalecha.github.io" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
+gems:
+  - jekyll-feed
