--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,8 @@
 # Site settings
 title: Gregory Malecha
-email: gmalecha@cs.harvard.edu
+email: gmalecha@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  I do research on program verification, compilers, and program analysis.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "https://gmalecha.github.io" # the base hostname & protocol for your site
 
