--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: Gregory Malecha
+title: gregory malecha
 email: gmalecha@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  I do research on program verification, compilers, and program analysis.
+  I do research on programming languages, program verification, compilers, and program analysis.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "https://gmalecha.github.io" # the base hostname & protocol for your site
 
