--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@
 title: Gregory Malecha
 email: gmalecha@gmail.com
 url: https://gmalecha.github.io
+host: gmalecha.github.io
 description:
   I do research on programming languages, program verification, compilers, and program analysis.
 skills: "Programming Languages - Program Verification - Static Analysis - Compilers"
