--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,15 @@ color:
   secondary-text: 727272
   divider-color: B6B6B6
 
+collections:
+  publications:
+    output: true
+    layout: publication
+    permalink: /publication/:path/:title
+  posts:
+    output: true
+    layout: post
+    permalink: /reflection/:year/:path/:title
 
 # Footer settings
 footer:
