--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,8 @@ title: Gregory Malecha
 email: gmalecha@gmail.com
 url: https://gmalecha.github.io
 hostname: gmalecha.github.io
+synopsis: Mullings on computer science and math, from programming languages, program verification, compilers, and program analysis.
+# , from formal methods to machine learning.
 description:
   I do research on programming languages, program verification, compilers, and program analysis.
 skills: "Programming Languages - Program Verification - Static Analysis - Compilers"
@@ -71,10 +73,11 @@ footer:
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: github
-    url: http://github.com/gmalecha
+    url: https://github.com/gmalecha
   - title: twitter
-    url: http://twitter.com/gregory_malecha
-
+    url: https://twitter.com/gregory_malecha
+  - title: google-plus
+    url: https://plus.google.com/+GregoryMalecha
 
 # Build settings
 markdown: kramdown
