--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Gregory Malecha
 email: gmalecha@gmail.com
 url: https://gmalecha.github.io
 hostname: gmalecha.github.io
-synopsis: Mullings on computer science and math, from programming languages, program verification, compilers, and program analysis.
+synopsis: Mullings on computer science and math: programming languages, compilers, and program analysis.
 # , from formal methods to machine learning.
 description:
   I do research on programming languages, program verification, compilers, and program analysis.
