--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ collections:
     section_url: publications
   posts:
     output: true
-    permalink: /reflections/:year/:path/:title
+    permalink: /reflections/:year/:month/:title
     section_url: publications
 
 defaults:
